[tool.poetry]
name = "inclusive_django_range_fields"
version = "0.2.3"
description = "Inclusive Django Range Fields which uses default bounds as '[]'"
authors = ["Hipo <pypi@hipolabs.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hipo/inclusive-django-range-fields"
repository = "https://github.com/hipo/inclusive-django-range-fields"
keywords = ["python", "django", "django rest framework", "postgres", "range field"]
classifiers = [
    "Framework :: Django",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4, <4"
Django = { version = ">=1.8"}
djangorestframework = { version = ">=3.0"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
